Updating to have a default for the output dir 2.  Otherwise, this breaks all existing 2-schema imports.
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/clover-integration@7202 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -89,11 +89,11 @@ Note: Due to java native library classloader issues, the export routine (and pos
 	<property name="delete.export.graph.files" value="true" />
 	<available file="plugins" property="plugins.exist" />
 	<property name="torque.output.dir" value="${torque.schema.dir}/output" /> <!-- default value--> 
+	<property name="torque.output.dir.2" value="${torque.schema.dir.2}/output" /> <!-- default value--> 
 
 	<condition property="import.two.schemas">
 		<and>
 			<isset property="torque.schema.dir.2" />
-			<isset property="torque.output.dir.2" />
 		</and>
 	</condition>
 
