--- a/build.properties
+++ b/build.properties
@@ -206,7 +206,7 @@ name=ObJectRelationalBridge
 project-name=db-ojb
 major=1
 minor=0
-build=4_01-patch
+build=4-patch4
 version=${major}.${minor}.${build}
 versiondate=2005-12-30
 ojb-filename-prefix=${project-name}-${version}
