--- a/kc/krdly30/deploy.cfg
+++ b/kc/krdly30/deploy.cfg
@@ -1,4 +1,4 @@
-svnLocation=rice/tags/1.0.3-KC-07
+svnLocation=rice/tags/1.0.3-08
 deployURL=test.kc.kuali.org:/opt/kc/dly30/webapps/kr-dly30.war
 configURL=test.kc.kuali.org:~/kuali/main/dly30/
 
