--- a/impex/build.xml
+++ b/impex/build.xml
@@ -563,17 +563,17 @@ Please place the jar file for this class in the lib directory and try again.
 	-->
 
 	<target name="mysql-create-user" depends="inittasks">
-		<adminsql sql="CREATE USER '${import.torque.database.user}'@'localhost' IDENTIFIED BY '${import.torque.database.password}'" onerror="continue" />
+		<adminsql sql="CREATE USER '${import.torque.database.user}'@'%' IDENTIFIED BY '${import.torque.database.password}'" onerror="continue" />
 	</target>
 
 	<target name="mysql-create-app-user" depends="inittasks">
-		<adminsql sql="CREATE USER '${import.torque.database.user}_user'@'localhost' IDENTIFIED BY '${import.torque.database.password}_user'" onerror="continue" />
-		<adminsql sql="GRANT ALL ON ${import.torque.database.schema}.* TO '${import.torque.database.user}_user'@'localhost' WITH GRANT OPTION" onerror="continue" />
+		<adminsql sql="CREATE USER '${import.torque.database.user}_user'@'%' IDENTIFIED BY '${import.torque.database.password}_user'" onerror="continue" />
+		<adminsql sql="GRANT ALL ON ${import.torque.database.schema}.* TO '${import.torque.database.user}_user'@'%' WITH GRANT OPTION" onerror="continue" />
 	</target>
 
 	<target name="mysql-create-schema" depends="inittasks">
 		<adminsql sql="CREATE DATABASE IF NOT EXISTS ${import.torque.database.schema} DEFAULT CHARACTER SET 'utf8' DEFAULT COLLATE 'utf8_bin'" onerror="continue" />
-		<adminsql sql="GRANT ALL ON ${import.torque.database.schema}.* TO '${import.torque.database.user}'@'localhost' WITH GRANT OPTION" onerror="continue" />
+		<adminsql sql="GRANT ALL ON ${import.torque.database.schema}.* TO '${import.torque.database.user}'@'%' WITH GRANT OPTION" onerror="continue" />
 	</target>
 
 	<target name="mysql-drop-schema" depends="inittasks">
