--- a/kc/krtrunk/deploy.cfg
+++ b/kc/krtrunk/deploy.cfg
@@ -1,4 +1,4 @@
-svnLocation=rice/tags/1.0.3-KC-07
+svnLocation=rice/tags/1.0.3-11
 deployURL=test.kc.kuali.org:/opt/kc/trunk/webapps/kr-trunk.war
 configURL=test.kc.kuali.org:~/kuali/main/trunk/
 
