Fixed liquibase property in sample file
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/clover-integration@7204 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/impex-build-sample.properties
+++ b/impex/impex-build-sample.properties
@@ -79,7 +79,7 @@ import.torque.database.password=kuldemo
 #post.import.liquibase.project=
 # after data import, have impex run liquibase scripts in this directory
 # the scripts will be run in file name order within this directory
-post.import.liquibase.xml.directory=../../${post.import.workflow.project}/liquibase
+post.import.liquibase.xml.directory=../../${post.import.liquibase.project}/liquibase
 
 # after liquibase import, ingest workflow XML from the specified location
 
