--- a/impex/build.xml
+++ b/impex/build.xml
@@ -1092,6 +1092,8 @@ END;
 	        <classpath refid="torque-classpath"/>
 	    </taskdef>
 	    -->
+	    <!-- Ensure that all will be run by default to preserve existing behavior -->
+	    <property name="post.import.liquibase.contexts" value="" />
     	<for param="file.name" keepgoing="false" parallel="false">
     	    <path>
     	    	  <!-- ensure that the files are run in name order -->
@@ -1124,6 +1126,7 @@ END;
     				<arg value="--defaultSchemaName=${import.torque.database.schema}" />
     				<arg value="--changeLogFile=@{file.name}" />
     				<arg value="--logLevel=finest" />
+    				<arg value="--contexts=${post.import.liquibase.contexts}" />
     				<arg value="update" />
     			</java>
     		</sequential>
