--- a/impex/impex-build-sample.properties
+++ b/impex/impex-build-sample.properties
@@ -81,6 +81,10 @@ import.torque.database.password=kuldemo
 # the scripts will be run in file name order within this directory
 post.import.liquibase.xml.directory=../../${post.import.liquibase.project}/liquibase
 
+# Set this to the contexts you want to execute - non matching changeSets will not be run
+# If left blank, all contexts will be run
+#post.import.liquibase.contexts=bootstrap,demo
+
 # after liquibase import, ingest workflow XML from the specified location
 
 # project from which the workflow should be imported
