--- a/impex/build.xml
+++ b/impex/build.xml
@@ -1126,7 +1126,7 @@ END;
     				<arg value="--defaultSchemaName=${import.torque.database.schema}" />
     				<arg value="--changeLogFile=@{file.name}" />
     				<arg value="--logLevel=finest" />
-    				<arg value="--contexts=${post.import.liquibase.contexts}" />
+    				<arg value="-contexts=${post.import.liquibase.contexts}" />
     				<arg value="update" />
     			</java>
     		</sequential>
