--- a/impex/build.xml
+++ b/impex/build.xml
@@ -1093,7 +1093,7 @@ END;
 	    </taskdef>
 	    -->
 	    <!-- Ensure that all will be run by default to preserve existing behavior -->
-	    <property name="post.import.liquibase.contexts" value="" />
+	    <property name="post.import.liquibase.contexts" value="demo" />
     	<for param="file.name" keepgoing="false" parallel="false">
     	    <path>
     	    	  <!-- ensure that the files are run in name order -->
@@ -1126,7 +1126,7 @@ END;
     				<arg value="--defaultSchemaName=${import.torque.database.schema}" />
     				<arg value="--changeLogFile=@{file.name}" />
     				<arg value="--logLevel=finest" />
-    				<arg value="-contexts=${post.import.liquibase.contexts}" />
+    				<arg value="--contexts=${post.import.liquibase.contexts}" />
     				<arg value="update" />
     			</java>
     		</sequential>
