Removed targetos, since causing problems on windows
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/clover-integration@7210 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -1110,8 +1110,7 @@ END;
     				</fileset>
     			</path>
     			<pathconvert refid="driver.classpath.for.liquibase"
-    						 property="driver.classpath.for.liquibase.string"
-    						 targetos="unix" />
+    						 property="driver.classpath.for.liquibase.string" />
     		    <echo message="Running Liquibase ChangeLog: @{file.name}" />
     			<java jar="../lib/liquibase-1.9.5.jar" 
     					failonerror="true" 
