--- a/kc/krdly30/deploy.cfg
+++ b/kc/krdly30/deploy.cfg
@@ -1,4 +1,5 @@
-svnLocation=rice/tags/1.0.3-13
+svnLocation=rice/branches/rice-release-1-0-3-1-br
+svnRevision=14794
 deployURL=test.kc.kuali.org:/opt/kc/dly30/webapps/kr-dly30.war
 configURL=test.kc.kuali.org:~/kuali/main/dly30/
 
