--- a/kc/krtrunk/deploy.cfg
+++ b/kc/krtrunk/deploy.cfg
@@ -1,4 +1,5 @@
-svnLocation=rice/tags/1.0.3-13
+svnLocation=rice/branches/rice-release-1-0-3-1-br
+svnRevision=14783
 deployURL=test.kc.kuali.org:/opt/kc/trunk/webapps/kr-trunk.war
 configURL=test.kc.kuali.org:~/kuali/main/trunk/
 
