--- a/kc/krdly30/deploy.cfg
+++ b/kc/krdly30/deploy.cfg
@@ -1,5 +1,4 @@
-svnLocation=rice/branches/rice-release-1-0-3-1-br
-svnRevision=14783
+svnLocation=rice/tags/1.0.3-13
 deployURL=test.kc.kuali.org:/opt/kc/dly30/webapps/kr-dly30.war
 configURL=test.kc.kuali.org:~/kuali/main/dly30/
 
