Moving to the released Rice 1.0.3 tag
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5727 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/krdly30/deploy.cfg
+++ b/kc/krdly30/deploy.cfg
@@ -1,4 +1,4 @@
-svnLocation=rice/tags/1.0.3-13
+svnLocation=rice/tags/rice-release-1-0-3-tag
 deployURL=test.kc.kuali.org:/opt/kc/dly30/webapps/kr-dly30.war
 configURL=test.kc.kuali.org:~/kuali/main/dly30/
 
