--- a/kc/krwkly30/deploy.cfg
+++ b/kc/krwkly30/deploy.cfg
@@ -1,4 +1,4 @@
-svnLocation=rice/tags/1.0.3-13
+svnLocation=rice/tags/rice-release-1-0-3-tag
 deployURL=test.kc.kuali.org:/opt/kc/wkly30/webapps/kr-wkly30.war
 configURL=test.kc.kuali.org:~/kuali/main/wkly30/
 
