--- a/impex/build.xml
+++ b/impex/build.xml
@@ -341,7 +341,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 	        depends="check-import-properties,create-ddl,apply-ddl,pre-import-sql,import-data,import-data2,run-liquibase-post-import,apply-constraint-ddl,post-import-sql,import-workflow"
 	        description="==> Main Import Task" />
 	
-	<target name="pre-import-sql" if="pre.import.script.files">
+	<target name="pre-import-sql" depends="inittasks" if="pre.import.script.files">
 		<for list="${pre.import.script.files}" param="fileName" trim="true" keepgoing="false" parallel="false">
 			<sequential>
 				<run-sql-file file="@{fileName}" />
@@ -349,7 +349,7 @@ Note: Due to java native library classloader issues, the export routine (and pos
 		</for>
 	</target>
 
-	<target name="post-import-sql" if="post.import.script.files">
+	<target name="post-import-sql" depends="inittasks" if="post.import.script.files">
 		<for list="${post.import.script.files}" param="fileName" trim="true" keepgoing="false" parallel="false">
 			<sequential>
 				<run-sql-file file="@{fileName}" />
