--- a/kc/kcdly30/deploy.cfg
+++ b/kc/kcdly30/deploy.cfg
@@ -2,7 +2,7 @@ svnLocation=kc_project/trunk
 deployURL=test.kc.kuali.org:/opt/kc/dly30/webapps/kc-dly30.war
 configURL=test.kc.kuali.org:~/kuali/main/dly30/
 
-dbType=oracle
+dbType=mysql
 import.torque.database.user=kcdly30
 import.torque.database.schema=kcdly30
 import.torque.database.password=dly174kc
