git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5741 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/kcdly30/deploy.cfg
+++ b/kc/kcdly30/deploy.cfg
@@ -6,3 +6,4 @@ dbType=mysql
 import.torque.database.user=kcdly30
 import.torque.database.schema=kcdly30
 import.torque.database.password=dly174kc
+import.torque.database.url=jdbc:mysql://localhost:3306/kcdly30
