--- a/kc/krrelease/deploy.cfg
+++ b/kc/krrelease/deploy.cfg
@@ -1,5 +1,6 @@
-svnLocation=rice/tags/1.0.3-13
-deployURL=test.kc.kuali.org:/opt/kc/dly30/webapps/kr-release.war
+svnLocation=rice/branches/rice-release-1-0-3-1-br
+svnRevision=14783
+deployURL=test.kc.kuali.org:/opt/kc/trunk/webapps/kr-trunk.war
 configURL=test.kc.kuali.org:~/kuali/main/release/
 
 dbType=oracle
