--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali</artifactId>
-    <version>71-SNAPSHOT</version>
+    <version>71</version>
   </parent>
   <groupId>org.kuali.ojb</groupId>
   <artifactId>db-ojb</artifactId>
