--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <url>https://test.kuali.org/svn/kul-obj-1.0.4/trunk</url>
   </scm>
   <properties>
+    <kuali.release.goals>clean</kuali.release.goals>
     <kuali.repository.release.id>kuali.external</kuali.repository.release.id>
     <kuali.repository.release.name>Kuali External Repository</kuali.repository.release.name>
     <kuali.repository.release.url>s3://maven.kuali.org/external</kuali.repository.release.url>
