--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,9 @@
     </repository>
   </repositories>
   <scm>
-    <connection>scm:svn:https://test.kuali.org/svn/kul-obj-1.0.4/tags/db-ojb-1.0.4-patch5</connection>
-    <developerConnection>scm:svn:https://test.kuali.org/svn/kul-obj-1.0.4/tags/db-ojb-1.0.4-patch5</developerConnection>
-    <url>https://test.kuali.org/svn/kul-obj-1.0.4/tags/db-ojb-1.0.4-patch5</url>
+    <connection>scm:svn:https://test.kuali.org/svn/kul-ojb-1.0.4/trunk</connection>
+    <developerConnection>scm:svn:https://test.kuali.org/svn/kul-ojb-1.0.4/trunk</developerConnection>
+    <url>https://test.kuali.org/svn/kul-ojb-1.0.4/trunk</url>
   </scm>
   <properties>
     <kuali.release.goals>clean</kuali.release.goals>
