--- a/kc/krrelease/deploy.cfg
+++ b/kc/krrelease/deploy.cfg
@@ -1,5 +1,4 @@
-svnLocation=rice/branches/rice-release-1-0-3-1-br
-svnRevision=15438
+svnLocation=rice/tags/1.0.3-13
 deployURL=test.kc.kuali.org:/opt/kc/trunk/webapps/kr-trunk.war
 configURL=test.kc.kuali.org:~/kuali/main/release/
 
