Patch from Sam Wilson via Eric Westfall for RICEINFR-41 - defaulting import.torque.threads to 1 in the case where no import.torque.threads property is present in impex-build.properties
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/trunk@7217 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/build.xml
+++ b/impex/build.xml
@@ -86,6 +86,13 @@ Note: Due to java native library classloader issues, the export routine (and pos
 
 	<property name="source.zip" value="${torque.schema.dir}/${torque.project}-data.zip" />
 	<property name="target.zip" value="${torque.schema.dir}/${torque.project}-data.zip" />
+	<!-- 
+	default properties ... if these aren't loaded by the previous 
+	property imports then they will be set here to avoid need for 
+	excessive config.
+	-->
+	<property name="import.torque.threads" value="1"/>
+	
 
 	<condition property="import.two.schemas">
 		<and>
