Added dbMode to signify embedded or bundled database for automatic deployments
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/cfg-envs/trunk@5750 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kc/kcdly30/deploy.cfg
+++ b/kc/kcdly30/deploy.cfg
@@ -3,6 +3,7 @@ deployURL=test.kc.kuali.org:/opt/kc/dly30/webapps/kc-dly30.war
 configURL=test.kc.kuali.org:~/kuali/main/dly30/
 
 dbType=mysql
+dbMode=embedded
 import.torque.database.user=kcdly30
 import.torque.database.schema=kcdly30
 import.torque.database.password=dly174kc
