--- a/kc/kcptd/deploy.cfg
+++ b/kc/kcptd/deploy.cfg
@@ -3,6 +3,7 @@ deployURL=testdrive.kc.kuali.org:/opt/kc/ptd/webapps/kc-ptd.war
 configURL=testdrive.kc.kuali.org:~/kuali/main/ptd/
 
 dbType=oracle
+dbMode=bundled
 import.torque.database.user=kcptd
 import.torque.database.schema=kcptd
 import.torque.database.password=ptd174kc
