--- a/kc/kcrelease/deploy.cfg
+++ b/kc/kcrelease/deploy.cfg
@@ -3,6 +3,7 @@ deployURL=test.kc.kuali.org:/opt/kc/release/webapps/kc-release.war
 configURL=test.kc.kuali.org:~/kuali/main/release/
 
 dbType=oracle
+dbMode=embedded
 import.torque.database.user=kcrelease
 import.torque.database.schema=kcrelease
 import.torque.database.password=release174kc
