--- a/kc/kctrunk/deploy.cfg
+++ b/kc/kctrunk/deploy.cfg
@@ -3,6 +3,7 @@ deployURL=test.kc.kuali.org:/opt/kc/trunk/webapps/kc-trunk.war
 configURL=test.kc.kuali.org:~/kuali/main/trunk/
 
 dbType=oracle
+dbMode=embedded
 import.torque.database.user=kctrunk
 import.torque.database.schema=kctrunk
 import.torque.database.password=trunk174kc
