--- a/kc/kcwkly30/deploy.cfg
+++ b/kc/kcwkly30/deploy.cfg
@@ -3,6 +3,7 @@ deployURL=test.kc.kuali.org:/opt/kc/wkly30/webapps/kc-wkly30.war
 configURL=test.kc.kuali.org:~/kuali/main/wkly30/
 
 dbType=oracle
+dbMode=embedded
 import.torque.database.user=kcwkly30
 import.torque.database.schema=kcwkly30
 import.torque.database.password=wkly174kc
