--- a/kc/kcparm30/deploy.cfg
+++ b/kc/kcparm30/deploy.cfg
@@ -3,6 +3,7 @@ deployURL=test.kc.kuali.org:/opt/kc/parm30/webapps/kc-parm30.war
 configURL=test.kc.kuali.org:~/kuali/main/parm30/
 
 dbType=oracle
+dbMode=bundled
 import.torque.database.user=kcparm30
 import.torque.database.schema=kcparm30
 import.torque.database.password=parm174kc
