--- a/kc/krwkly30/deploy.cfg
+++ b/kc/krwkly30/deploy.cfg
@@ -1,4 +1,5 @@
 svnLocation=rice/branches/rice-release-1-0-3-1-br
+svnRevision=15438
 deployURL=test.kc.kuali.org:/opt/kc/wkly30/webapps/kr-wkly30.war
 configURL=test.kc.kuali.org:~/kuali/main/wkly30/
 
