--- a/kc/krrelease/deploy.cfg
+++ b/kc/krrelease/deploy.cfg
@@ -1,4 +1,5 @@
-svnLocation=rice/tags/1.0.3-13
+svnLocation=rice/branches/rice-release-1-0-3-1-br
+svnRevision=15644
 deployURL=test.kc.kuali.org:/opt/kc/release/webapps/kr-release.war
 configURL=test.kc.kuali.org:~/kuali/main/release/
 
