--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali</artifactId>
-    <version>82-SNAPSHOT</version>
+    <version>83</version>
   </parent>
   <groupId>org.kuali</groupId>
   <artifactId>kuali-extras</artifactId>
