Change 'common' to 'extras' in the description
git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@821 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -21,7 +21,7 @@
   <artifactId>kuali-extras</artifactId>
   <version>1-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>Kuali Common</name>
+  <name>Kuali Extras</name>
   <description>Provides reasonable defaults for common items</description>
   <url>http://${kuali.site.hostname}/${project.artifactId}/${project.version}/</url>
   <properties>
