Better name for the clover2 execution id that creates clover2 info
git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@825 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -302,7 +302,7 @@
             <artifactId>maven-clover2-plugin</artifactId>
             <executions>
               <execution>
-                <id>clover-instrument</id>
+                <id>generate-clover-info</id>
                 <phase>pre-site</phase>
                 <goals>
                   <goal>instrument</goal>
