--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -9,7 +9,8 @@
   express or implied. See the License for the specific language governing
   permissions and limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
@@ -31,6 +32,7 @@
     <!-- Default Clover config -->
     <kuali.clover.generate.info.phase>pre-site</kuali.clover.generate.info.phase>
     <kuali.clover.history.dir>${user.home}/.clover/history/${project.groupId}/${project.artifactId}/${project.version}</kuali.clover.history.dir>
+    <kuali.clover.license.location>${user.home}/.clover/clover.license</kuali.clover.license.location>
     <kuali.clover.history.generate>true</kuali.clover.history.generate>
     <kuali.clover.exclude.pattern.1>DO_NOT_MATCH_ANYTHING_PATTERN</kuali.clover.exclude.pattern.1>
     <kuali.clover.exclude.pattern.2>DO_NOT_MATCH_ANYTHING_PATTERN</kuali.clover.exclude.pattern.2>
@@ -227,7 +229,7 @@
                 <groupId>com.atlassian.maven.plugins</groupId>
                 <artifactId>maven-clover2-plugin</artifactId>
                 <configuration>
-                  <license>${kuali.clover.license}</license>
+                  <licenseLocation>${kuali.clover.license.location}</licenseLocation>
                   <generateHistorical>${kuali.clover.history.generate}</generateHistorical>
                   <historyDir>${kuali.clover.history.dir}</historyDir>
                 </configuration>
@@ -312,7 +314,7 @@
               </execution>
             </executions>
             <configuration>
-              <license>${kuali.clover.license}</license>
+              <licenseLocation>${kuali.clover.license.location}</licenseLocation>
               <historyDir>${kuali.clover.history.dir}</historyDir>
             </configuration>
           </plugin>
