[maven-release-plugin] prepare release kuali-extras-2
git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@827 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -9,8 +9,7 @@
   express or implied. See the License for the specific language governing
   permissions and limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
@@ -19,7 +18,7 @@
   </parent>
   <groupId>org.kuali</groupId>
   <artifactId>kuali-extras</artifactId>
-  <version>2-SNAPSHOT</version>
+  <version>2</version>
   <packaging>pom</packaging>
   <name>Kuali Extras</name>
   <description>Provides reasonable defaults for common items</description>
@@ -90,9 +89,9 @@
     </repository>
   </repositories>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/extras</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/extras</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/trunk/extras</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-extras-2</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-extras-2</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/tags/kuali-extras-2</url>
   </scm>
   <build>
     <pluginManagement>
