--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -18,7 +18,7 @@
   </parent>
   <groupId>org.kuali</groupId>
   <artifactId>kuali-extras</artifactId>
-  <version>2</version>
+  <version>3-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Kuali Extras</name>
   <description>Provides reasonable defaults for common items</description>
@@ -89,9 +89,9 @@
     </repository>
   </repositories>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-extras-2</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-extras-2</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/tags/kuali-extras-2</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/extras</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/extras</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/trunk/extras</url>
   </scm>
   <build>
     <pluginManagement>
