--- a/common/pom.xml
+++ b/common/pom.xml
@@ -9,7 +9,8 @@
   express or implied. See the License for the specific language governing
   permissions and limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
@@ -17,10 +18,10 @@
     <version>83</version>
   </parent>
   <groupId>org.kuali</groupId>
-  <artifactId>kuali-extras</artifactId>
+  <artifactId>kuali-common</artifactId>
   <version>3-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>Kuali Extras</name>
+  <name>Kuali Common</name>
   <description>Provides reasonable defaults for common items</description>
   <url>http://${kuali.site.hostname}/${project.artifactId}/${project.version}/</url>
   <properties>
