--- a/kc/krtrunk/deploy.cfg
+++ b/kc/krtrunk/deploy.cfg
@@ -1,4 +1,5 @@
-svnLocation=rice/tags/rice-release-1-0-3-1-tag
+svnLocation=rice/branches/rice-release-1-0-3-2-br
+svnRevision=16577
 deployURL=test.kc.kuali.org:/opt/kc/trunk/webapps/kr-trunk.war
 configURL=test.kc.kuali.org:~/kuali/main/trunk/
 
